Updated content for newly added places

--- a/admin.html
+++ b/admin.html
@@ -28,7 +28,7 @@
         <div
           class="col-lg-3 col-md-5 logo pb-2 py-md-2 d-flex justify-content-center justify-content-lg-start"
         >
-          <a href="https://dscjssstu.in" target="_blank">
+          <a target="_blank"  href="https://dscjssstu.in" target="_blank">
             <img src="./images/logo.PNG" alt="logo" />
           </a>
         </div>
@@ -63,7 +63,7 @@
                     Admin Block
 
                     <!--Maps Link-->
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/x4va1oCsjJj4Rytr9"
                       class="map-link"
                     >
@@ -120,8 +120,8 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     Finance Section
-                    <a
-                      href="https://goo.gl/maps/UgQ1vpjBiW6hvFFY7"
+                    <a target="_blank" 
+                      href="https://goo.gl/maps/jCd5AzAHMkTEX6i5A"
                       class="map-link"
                     >
                       <span class="float-end pe-2">
@@ -143,8 +143,10 @@
 
                   <!--Point Content-->
                   <p class="card-text">
-                    Everything related to fee related queries, you know where to
-                    go! This section is part of the Golden Jublee
+                    Previously a part of the MBA block, it is now situated on
+                    the third floor of the Golden Jubilee Bhavan. You’ll have to
+                    make frequent visits to the section for fees, receipts or
+                    other related queries.
                   </p>
                 </div>
               </div>
@@ -172,7 +174,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     Punjab National Bank AKA PNB
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/VvmDCeKuVsyxuZ137"
                       class="map-link"
                     >
@@ -225,7 +227,7 @@
                   <h5 class="card-title">
                     On-campus Doctors
                     <!--Maps Link-->
-                    <a
+                    <a target="_blank" 
                       href="https://maps.app.goo.gl/tuLLYju1CHkwHuum7"
                       class="map-link"
                     >
