--- a/fun.html
+++ b/fun.html
@@ -28,7 +28,7 @@
         <div
           class="col-lg-3 col-md-5 logo pb-2 py-md-2 d-flex justify-content-center justify-content-lg-start"
         >
-          <a href="https://dscjssstu.in" target="_blank">
+          <a target="_blank"  href="https://dscjssstu.in" target="_blank">
             <img src="./images/logo.PNG" alt="logo" />
           </a>
         </div>
@@ -67,7 +67,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     Yampa
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/enqQfYDGeceDFq3z5"
                       class="map-link"
                     >
@@ -122,7 +122,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     LKB
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/dXJcFZT98KpYkU2r9"
                       class="map-link"
                     >
@@ -174,7 +174,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     Mylari
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/FQNdWHaW7RetPShh7"
                       class="map-link"
                     >
@@ -228,9 +228,9 @@
                 <div class="card-body py-4">
                   <!--Point Title-->
                   <h5 class="card-title">
-                    Laras Cafe
-                    <a
-                      href="https://goo.gl/maps/FQNdWHaW7RetPShh7"
+                    Lara’s Cafe
+                    <a target="_blank" 
+                      href="https://goo.gl/maps/m8MqmHYCXev73WBQ8"
                       class="map-link"
                     >
                       <span class="float-end pe-2">
@@ -251,7 +251,11 @@
                   </h5>
 
                   <!--Point Content-->
-                  <p class="card-text">😅....</p>
+                  <p class="card-text">From tea to coffee, from chilli paneer to samosas, from hangry to happy!
+                    Lara’s Cafe is the newest addition to the list of hangout spots on campus, and you’re quite literally in for a treat.
+                    Situated right next to Yampa and LK Burgers, Lara’s Cafe has a wide range of items on its menu and its own seating area. 
+                    After a long day of classes, Lara is the go to spot!
+                    </p>
                 </div>
               </div>
             </div>
@@ -278,7 +282,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     Kannan Bakery
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/cMSauUtmo3RzteJk8"
                       class="map-link"
                     >
@@ -332,7 +336,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     Cafe Frappe
-                    <a
+                    <a target="_blank" 
                       href="https://g.page/cafe-frappe-mysuru?share"
                       class="map-link"
                     >
@@ -385,7 +389,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     Nescafe
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/btS6hrAmYgEBWRCe6"
                       class="map-link"
                     >
@@ -445,7 +449,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     CS Lawn
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/A8PTiLpLZrcGeX6B9"
                       class="map-link"
                     >
@@ -496,8 +500,8 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     MBA Block
-                    <a
-                      href="https://goo.gl/maps/A8PTiLpLZrcGeX6B9"
+                    <a target="_blank" 
+                      href="https://goo.gl/maps/4J5F8afobuTENeZb6"
                       class="map-link"
                     >
                       <span class="float-end pe-2">
@@ -519,7 +523,7 @@
 
                   <!--Point Content-->
                   <p class="card-text">
-                    <p class="card-text">No Words 😅</p>
+                    <p class="card-text">With a beautiful garden at its entrance, the MBA block holds several event in its amphi-theater.</p>
                   </p>
                 </div>
               </div>
@@ -547,8 +551,8 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     Mech Auditorium
-                    <a
-                      href="https://goo.gl/maps/A8PTiLpLZrcGeX6B9"
+                    <a target="_blank" 
+                      href="https://goo.gl/maps/zsf8XyqM24gbD2xQ9"
                       class="map-link"
                     >
                       <span class="float-end pe-2">
@@ -569,7 +573,11 @@
                   </h5>
 
                   <!--Point Content-->
-                  <p class="card-text">😅..</p>
+                  <p class="card-text">
+                    The auditorium is always brimming with dance, drama, song, and fun events. 
+                    Post college class hours, it is an area of creativity and letting go of stress.
+                    Located behind the administration block, it is the hub for cultural practices.
+                  </p>
                 </div>
               </div>
             </div>
@@ -596,7 +604,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     Football Steps/Cricket Ground
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/D9iCofgvoRiywtsQ9"
                       class="map-link"
                     >
@@ -649,7 +657,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     BB Court
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/R96qUw7YwcScJYHs5"
                       class="map-link"
                     >
@@ -701,7 +709,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     Gym
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/ZGEnXqNgmFkMUWba8"
                       class="map-link"
                     >
@@ -754,7 +762,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     Parking Lot
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/TXnKity5pH61Np2w8"
                       class="map-link"
                     >
@@ -806,7 +814,7 @@
                   <!--Point Title-->
                   <h5 class="card-title">
                     Our college doggus
-                    <a
+                    <a target="_blank" 
                       href="https://goo.gl/maps/enqQfYDGeceDFq3z5"
                       class="map-link"
                     >
